--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 
 body {
     font-size: 24px;
-    width: 960px;
+    width: 1024px;
 
 }
 
@@ -29,21 +29,18 @@ header {
 section {
     padding: 20px;
     margin-bottom: 20px;
+    
 }
 
 form {
     color: #666;
 }
-input{
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: 608px;
-    height: 35px;
-    color: #666;
-}
+
 
 p {
     color: #666;
+    font-size: larger;
+
 }
 
 .button {
@@ -61,7 +58,7 @@ p {
 
 #heading {
     text-align: left;
-    padding: 20px;
+    padding: 21px;
     background-color: #4aaaa5;
     float: left;
     color:white;
@@ -73,16 +70,16 @@ p {
 #headingTwo{
     float: right;
     text-align: right;
-    padding: 25px;
+    padding: 30px;
     position: fixed;
     top: 0;
-    left: 670px;
+    left: 700px;
     font-size: 18px;
-    margin-right: 40px;
+    margin-right: 60px;
     color: #777777;
 
 }
-.boxhead a {
+#boxhead a {
     text-decoration: none;
     color: #777777;
     padding-right: 10px;
@@ -114,13 +111,12 @@ p {
 #full {
     clear: both;
     overflow: auto;
-    width: 100%;
     border-bottom: 5px solid #4aaaa5;
     margin-bottom: 0px;
     background-image: url("../images/seigaiha.png");
 }
 
-#division {
+/*#division {
     float: left;
     background-color: white;
     color: #4aaaa5;
@@ -129,7 +125,7 @@ p {
     text-align: center;
     height: 120px;
     width: 250px;
-}
+}*/
 
 #miniHeader{
     border-bottom: 1px solid #777777 ;
@@ -144,29 +140,14 @@ p {
     color: #4aaaa5;
 }
 
-#github{
-    padding-top: 7px;
-    float: left;
-    width: 33%;
-}
 
-#linkedin{
-    padding-top: 5px;
-    float: left;
-    width: 33%;
-}
 
-#stackOverflow{
-    padding-top: 7px;
-    float: left;
-    width: 33%;
-}
-
-#photos {
+#image1 {
     float: left;
     margin-top: 20px;
     width: 290px;
     height: 200px;
+    padding: 10px;
     background-image: url("../images/hangman.jpg");
 }
 
@@ -177,7 +158,7 @@ p {
     text-align: center;
 }
 
-#photos2 {
+#image2 {
     float: left;
     margin-top: 20px;
     margin-left: 28px;
@@ -192,7 +173,7 @@ p {
     padding: 10px;
     text-align: center;
 }
-#photos3 {
+#image3 {
     float: left;
     margin-top: 20px;
     width: 290px;
@@ -207,7 +188,7 @@ p {
     text-align: center;
 }
 
-#photos4 {
+#image4 {
     float: left;
     margin-top: 20px;
     margin-left: 28px;
@@ -237,29 +218,78 @@ p {
     padding: 10px;
     text-align: center;
 }
-#application{
-    margin-top: 20px;
-    text-align: left;
-    float: left;
-    color: #888
-}
 
 
 aside {
-    background-color: #fff;
-    width:640px;
+    background-color: #ffffff;
+    width:960px;
     height: 740px;
-    border: 1px solid #fff;
+    border: 1px solid #ffffff;
     padding: 15px;
     float: left;
-    margin-left: 17px;
-    margin-right: 3px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 footer {
     clear: both;
     background-color: #666666;
     padding: 20px;
+    min-width: 1024px;
     color:#888;
     font-size: x-small;
+    text-align: center;
 }
+  
+  /* Style inputs */
+  input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  /* Style the container/contact section */
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 10px;
+  }
+  
+  /* Create two columns that float next to eachother */
+  .column {
+    float: left;
+    width: 50%;
+    margin-top: 6px;
+    padding: 20px;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+    }
+  }
+  
